# pyfig-style

./: .gitignore  README.md  pyfig_style.py  pyproject.toml
examples/: demo.py  palette_reference.py
python/: pyproject.toml  shabviz_style.py
python/examples/: demo.py  palette_reference.py
r/: DESCRIPTION  LICENSE  NAMESPACE  README.md
r/R/: palettes.R  scales.R  theme.R
